data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2079.wast
;; 10. **Test Description:**    A block wrapping a loop where `br_if` checks a condition altered in another nested block, leading to an unexpected infinite loop.      **Constraint Checked:** The impact of nested blocks on conditional branching and state.      **Relation to Infinite Loops:** Ensures that the context is properly managed and updated across nested blocks and loops.

(assert_invalid
  (module (func $nested-block-loop-br_if (result i32)
    (block (result i32) 
      (loop (result i32) 
        (block (result i32) 
          (br_if 1 (br 0 (i32.const 0))) 
          (i32.const 1)
        )
      )
    )
  ))
  "type mismatch"
)